# koai

./: .gitignore  Cargo.toml  DockerFile  DockerFile-aarch  DockerFile-slim  DockerFile-x86_64  DockerFile2  DockerFile3  README.md  bm25-0.0.0.1-cp310-cp310-manylinux_2_34_x86_64.manylinux_2_35_x86_64.whl  main.py  requirements.txt  setup.py  temp.py  test.py
.circleci/: config.yml
koai/: __init__.py  text.rs
koai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
koai/benchmarks/: __init__.py  benchmarks.json  evaluation.py  finetune.py  finetune_utils.py  modeling_dp.py  modeling_re.py  postprocess.py  preprocess.py  relation_extraction.py  utils_qa.py
koai/benchmarks/data/: benchmarks.json
koai/models/: __init__.py  auto.py
koai/models/biencoder/: __init__.py  bert.py
koai/trainer/: trainer_contrastive.py
koai/utils/: __init__.py  bm25.rs  iterable_dataset.py  lib.rs  rs_utils.rs  text.py  text.rs
