[package]
name = "koai"
version = "0.0.1"
authors = ["psyche"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rs_utils"
path = "koai/utils/text.rs"
crate-type = ["cdylib"]


[bm25]
name = "bm25"
path = "koai/utils/bm25.rs"
crate-type = ["cdylib"]

[dependencies]

[dependencies.pyo3]
version = "*"
features = ["extension-module"]