[package]
name = "koai"
version = "0.0.1"
authors = ["psyche"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rs_utils"
path = "koai/utils/lib.rs"
crate-type = ["cdylib"]

[dependencies]
serde_derive = "1.0.117"
serde_json = "*"
serde = "*"
tqdm-rs = "*"
counter = "*"
rayon = "*"

[dependencies.pyo3]
version = "*"
features = ["extension-module"]